--- a/sass/_desktop.scss
+++ b/sass/_desktop.scss
@@ -158,6 +158,10 @@
         .call__buttons{
             padding: 60px 0;
         }
+        .cards{
+            max-width: 1300px;
+            margin: auto;
+        }
     }
     .slides{
         .subtitle-2{text-align: right;}
