--- a/sass/_tablet.scss
+++ b/sass/_tablet.scss
@@ -19,7 +19,6 @@
     .call{
         &__buttons{
             flex-direction: row;
-            justify-content: center;
         }
     }
     .title{
